# rustkernel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
bootloader/: Cargo.toml
bootloader/src/: lib.rs
kernel/: Cargo.toml  linker.ld
kernel/src/: allocator.rs  boot.s  devicetree.rs  exceptions.s  interrupt_test.rs  interrupts.rs  ipc.rs  main.rs  process.rs  uart.rs
kernel/src/memory/: allocator.rs  frame_allocator.rs  mmu.rs  mod.rs  paging.rs  test.rs
userland/runtime/: Cargo.toml
userland/runtime/src/: lib.rs  syscalls.rs
userland/services/memory-manager/: Cargo.toml
userland/services/memory-manager/src/: lib.rs
userland/services/process-manager/: Cargo.toml
userland/services/process-manager/src/: lib.rs
